--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
-version: "3.8"
+version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+    container_name: mflow-backend
     ports:
       - "8000:8000"
-    environment:
-      ORACLE_USER: ${ORACLE_USER}
-      ORACLE_PASSWORD: ${ORACLE_PASSWORD}
-      ORACLE_DSN: ${ORACLE_DSN}
+    env_file:
+      - .env
+    restart: always
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+    container_name: mflow-frontend
     ports:
-      - "3000:3000"
+      - "80:80"
+    restart: always
